@@ -7,6 +7,8 @@
 
 	* akfavatar.h, avatar.c (avt_get_key): new function, replaces avt_key
 
+	* avatar-linuxfb.c: new file
+
 2012-10-26  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avttiming.c: new file
